Update exposed and bound ports.

--- a/julia/Dockerfile
+++ b/julia/Dockerfile
@@ -4,9 +4,10 @@ FROM julia:1.7.3
 
 WORKDIR /root
 
-COPY . .
+COPY requirements.jl requirements.jl
+COPY pluto.sh pluto.sh
 RUN julia requirements.jl
 
-EXPOSE 1234
+EXPOSE 8888 1234
 
-CMD ["/root/.julia/conda/3/bin/jupyter", "lab", "--allow-root", "--no-browser", "--ip=0.0.0.0", "--port=1234"]
+CMD ["/root/.julia/conda/3/bin/jupyter", "lab", "--allow-root", "--no-browser", "--ip=0.0.0.0", "--port=8888"]
