--- a/template.yml
+++ b/template.yml
@@ -1,10 +1,11 @@
 name: docker
 services:
   python:
-    image: lee/python:3.10.4
+    image: lee/python:3.10.5
     build: ./python
     ports: 
       - "8888:8888"
+      - "8787:8787"
     volumes:
       - type: bind
         source: /home/ubuntu/github
@@ -14,14 +15,19 @@ services:
     build: ./r
     ports: 
       - "8787:8787"
+      - "4040:4040"
     volumes:
       - type: bind
         source: /home/ubuntu/github
-        target: /root/github
+        target: /home/rstudio/github
+      - type: bind
+        source: /home/ubuntu/keys
+        target: /home/rstudio/keys
   julia:
     image: lee/julia:1.7.3
     build: ./julia
     ports: 
+      - "8888:8888"
       - "1234:1234"
     volumes:
       - type: bind
