--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -50,9 +50,9 @@ jupyterlab==3.4.3
 jupyterlab-pygments==0.2.2
 jupyterlab-server==2.14.0
 kiwisolver==1.4.3
-kopf==1.35.4
+kopf==1.35.5
 kubernetes==23.6.0
-kubernetes-asyncio==22.6.5
+kubernetes-asyncio==23.6.0
 locket==1.0.0
 MarkupSafe==2.1.1
 matplotlib==3.5.2
@@ -79,6 +79,7 @@ patsy==0.5.2
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.1.1
+pip==22.1.2
 prometheus-client==0.14.1
 prompt-toolkit==3.0.29
 psutil==5.9.1
@@ -96,7 +97,7 @@ python-dateutil==2.8.2
 python-json-logger==2.0.2
 pytz==2022.1
 PyYAML==6.0
-pyzmq==23.1.0
+pyzmq==23.2.0
 requests==2.28.0
 requests-oauthlib==1.3.1
 rsa==4.8
@@ -104,6 +105,7 @@ scikit-learn==1.1.1
 scipy==1.8.1
 seaborn==0.11.2
 Send2Trash==1.8.0
+setuptools==62.6.0
 six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
@@ -121,6 +123,7 @@ typing_extensions==4.2.0
 urllib3==1.26.9
 wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client==1.3.2
+websocket-client==1.3.3
+wheel==0.37.1
 yarl==1.7.2
 zict==2.2.0
