--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,1 +1,130 @@
-jupyterlab
+aiohttp==3.8.1
+aiosignal==1.2.0
+anyio==3.6.1
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.5
+async-timeout==4.0.2
+attrs==21.4.0
+Babel==2.10.3
+backcall==0.2.0
+beautifulsoup4==4.11.1
+bleach==5.0.0
+bokeh==2.4.3
+cachetools==5.2.0
+certifi==2022.6.15
+cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.1.3
+cloudpickle==2.1.0
+cycler==0.11.0
+dask==2022.6.1
+dask-kubernetes==2022.5.2
+debugpy==1.6.0
+decorator==5.1.1
+defusedxml==0.7.1
+distributed==2022.6.1
+entrypoints==0.4
+et-xmlfile==1.1.0
+executing==0.8.3
+fastjsonschema==2.15.3
+fonttools==4.33.3
+frozenlist==1.3.0
+fsspec==2022.5.0
+google-auth==2.8.0
+HeapDict==1.0.1
+idna==3.3
+ipykernel==6.15.0
+ipython==8.4.0
+ipython-genutils==0.2.0
+iso8601==1.0.2
+jedi==0.18.1
+Jinja2==3.1.2
+joblib==1.1.0
+json5==0.9.8
+jsonschema==4.6.0
+jupyter-client==7.3.4
+jupyter-core==4.10.0
+jupyter-server==1.18.0
+jupyterlab==3.4.3
+jupyterlab-pygments==0.2.2
+jupyterlab-server==2.14.0
+kiwisolver==1.4.3
+kopf==1.35.5
+kubernetes==24.2.0
+kubernetes-asyncio==23.6.0
+locket==1.0.0
+lz4==4.0.1
+MarkupSafe==2.1.1
+matplotlib==3.5.2
+matplotlib-inline==0.1.3
+mistune==0.8.4
+msgpack==1.0.4
+multidict==6.0.2
+nbclassic==0.3.7
+nbclient==0.6.4
+nbconvert==6.5.0
+nbformat==5.4.0
+nest-asyncio==1.5.5
+notebook==6.4.12
+notebook-shim==0.1.0
+numpy==1.23.0
+oauthlib==3.2.0
+openpyxl==3.0.10
+packaging==21.3
+pandas==1.4.3
+pandocfilters==1.5.0
+parso==0.8.3
+partd==1.2.0
+patsy==0.5.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.1.1
+pip==22.1.2
+prometheus-client==0.14.1
+prompt-toolkit==3.0.29
+psutil==5.9.1
+psycopg==3.0.15
+psycopg-binary==3.0.15
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+Pygments==2.12.0
+pyparsing==3.0.9
+pyrsistent==0.18.1
+python-dateutil==2.8.2
+python-json-logger==2.0.2
+pytz==2022.1
+PyYAML==6.0
+pyzmq==23.2.0
+requests==2.28.0
+requests-oauthlib==1.3.1
+rsa==4.8
+scikit-learn==1.1.1
+scipy==1.8.1
+seaborn==0.11.2
+Send2Trash==1.8.0
+setuptools==62.6.0
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+stack-data==0.3.0
+statsmodels==0.13.2
+tblib==1.7.0
+terminado==0.15.0
+threadpoolctl==3.1.0
+tinycss2==1.1.1
+toolz==0.11.2
+tornado==6.1
+traitlets==5.3.0
+typing_extensions==4.2.0
+urllib3==1.26.9
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.3.3
+wheel==0.37.1
+yarl==1.7.2
+zict==2.2.0
