--- a/template-wsl.yml
+++ b/template-wsl.yml
@@ -1,20 +1,5 @@
 name: docker
 services:
-  ubuntu:
-    image: docker/ubuntu:INPUT_UBUNTU_VERSION
-    build:
-      context: ./ubuntu
-      args:
-        UBUNTU_VERSION: INPUT_UBUNTU_VERSION
-    volumes:
-      - type: bind
-        source: /home/ubuntu/github
-        target: /home/ubuntu/github
-      - type: bind
-        source: /home/ubuntu/keys
-        target: /home/ubuntu/keys
-    stdin_open: true
-    tty: true
   python:
     image: docker/python:INPUT_PYTHON_VERSION
     build:
@@ -71,40 +56,9 @@ services:
         target: /root/keys
     environment:
       - NAMESPACE=julia
-  psql:
-    image: postgres:INPUT_PSQL_VERSION
-    ports:
-      - "5432:5432"
-    volumes:
-      - type: volume
-        source: psql
-        target: /var/lib/postgresql/data
-    environment:
-      - POSTGRES_PASSWORD=INPUT_PSQL_PASSWORD
-  trino:
-    image: trinodb/trino:INPUT_TRINO_VERSION
-    ports:
-      - "8080:8080"
-    volumes:
-      - type: bind
-        source: ./trino/catalog
-        target: /etc/trino/catalog
-      - type: volume
-        source: trino
-        target: /data/trino
-    environment:
-      - POSTGRES_PASSWORD=INPUT_PSQL_PASSWORD
-  # mysql:
-    # image: mysql:8.0.29
-    # ports:
-      # - "3306:3306"
-    # volumes:
-      # - type: volume
-        # source: mysql
-        # target: /var/lib/mysql
-    # environment:
-      # - MYSQL_ROOT_PASSWORD=PASSWORD_FILE
-volumes:
-  psql:
-  trino:
-  # mysql:
+  julia-worker:
+    image: docker/julia-worker:INPUT_JULIA_VERSION
+    build:
+      context: ./julia-worker
+      args:
+        JULIA_VERSION: INPUT_JULIA_VERSION
