--- a/julia/Project.toml
+++ b/julia/Project.toml
@@ -1,18 +1,14 @@
 [deps]
-Bootstrap = "e28b5b4c-05e8-5b66-bc03-6f0c0a0a06e0"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
-GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
-K8sClusterManagers = "5aeab163-63d2-4171-9fbf-e22244d80acb"
+JDBC = "6042db11-3c3d-5e84-8dba-9cbf74c9ba48"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
-LinRegOutliers = "6d4de0fb-32d9-4c65-aac1-cc9ed8b94b1a"
-Loess = "4345ca2d-374a-55d4-8d30-97f9976e7612"
-MLJ = "add582a8-e3ab-11e8-2d5e-e98b27df1bc7"
-MLJLinearModels = "6ee0df7b-362f-4a72-a706-9e79364fb692"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+ODBC = "be6f12e9-ca4f-5eb2-a339-a4f995cc0291"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
