Migrate to Google Cloud.

--- a/julia-worker/Dockerfile
+++ b/julia-worker/Dockerfile
@@ -9,7 +9,7 @@ WORKDIR ${HOME}
 
 COPY id_ed25519.pub id_ed25519.pub
 RUN apt update; \
-    apt install -y openssh-server; \
+    apt install --no-install-recommends -y openssh-server; \
     mkdir ${SSH_FOLDER}; \
     mv id_ed25519.pub ${SSH_FOLDER}; \
     cat ${SSH_FOLDER}/id_ed25519.pub >> ${SSH_FOLDER}/authorized_keys
@@ -18,7 +18,8 @@ COPY Project.toml Project.toml
 COPY Manifest.toml Manifest.toml
 COPY spec-file.txt spec-file.txt
 RUN julia -e 'using Pkg; Pkg.activate("."); Pkg.instantiate(); import Conda; Conda.update()'; \
-    ${HOME}/.julia/conda/3/bin/conda install -y --file spec-file.txt
+    ${HOME}/.julia/conda/3/bin/conda install -y --file spec-file.txt; \
+    rm -rf /var/lib/apt/lists/*
 
 EXPOSE 22
 
