--- a/julia-worker/Project.toml
+++ b/julia-worker/Project.toml
@@ -2,13 +2,12 @@
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
-JDBC = "6042db11-3c3d-5e84-8dba-9cbf74c9ba48"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 ODBC = "be6f12e9-ca4f-5eb2-a339-a4f995cc0291"
+POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
