--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -6,6 +6,8 @@ argon2-cffi-bindings==21.2.0
 asttokens==2.0.5
 async-timeout==4.0.2
 attrs==21.4.0
+azure-core==1.24.2
+azure-identity==1.10.0
 Babel==2.10.3
 backcall==0.2.0
 beautifulsoup4==4.11.1
@@ -17,6 +19,8 @@ cffi==1.15.1
 charset-normalizer==2.1.0
 click==8.1.3
 cloudpickle==2.1.0
+clr-loader==0.1.7
+cryptography==37.0.4
 cycler==0.11.0
 dask==2022.7.0
 dask-kubernetes==2022.5.2
@@ -27,11 +31,11 @@ distributed==2022.7.0
 entrypoints==0.4
 et-xmlfile==1.1.0
 executing==0.8.3
-fastjsonschema==2.15.3
+fastjsonschema==2.16.1
 fonttools==4.34.4
 frozenlist==1.3.0
 fsspec==2022.5.0
-google-auth==2.9.0
+google-auth==2.9.1
 HeapDict==1.0.1
 idna==3.3
 ipykernel==6.15.1
@@ -46,10 +50,10 @@ jsonschema==4.7.2
 jupyter-client==7.3.4
 jupyter-core==4.11.1
 jupyter-server==1.18.1
-jupyterlab==3.4.3
+jupyterlab==3.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-server==2.15.0
-kiwisolver==1.4.3
+kiwisolver==1.4.4
 kopf==1.35.5
 kubernetes==24.2.0
 kubernetes-asyncio==23.6.0
@@ -59,6 +63,8 @@ MarkupSafe==2.1.1
 matplotlib==3.5.2
 matplotlib-inline==0.1.3
 mistune==0.8.4
+msal==1.18.0
+msal-extensions==1.0.0
 msgpack==1.0.4
 multidict==6.0.2
 nbclassic==0.4.3
@@ -66,6 +72,7 @@ nbclient==0.6.6
 nbconvert==6.5.0
 nbformat==5.4.0
 nest-asyncio==1.5.5
+notebook==6.4.12
 notebook-shim==0.1.0
 numpy==1.23.1
 oauthlib==3.2.0
@@ -79,7 +86,8 @@ patsy==0.5.2
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.2.0
-pip==22.1.2
+pip==22.2
+portalocker==2.5.1
 prometheus-client==0.14.1
 prompt-toolkit==3.0.30
 psutil==5.9.1
@@ -91,21 +99,23 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 Pygments==2.12.0
+PyJWT==2.4.0
 pyparsing==3.0.9
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 python-json-logger==2.0.4
+pythonnet==3.0.0rc4
 pytz==2022.1
 PyYAML==6.0
 pyzmq==23.2.0
 requests==2.28.1
 requests-oauthlib==1.3.1
-rsa==4.8
+rsa==4.9
 scikit-learn==1.1.1
 scipy==1.8.1
 seaborn==0.11.2
 Send2Trash==1.8.0
-setuptools==63.1.0
+setuptools==63.2.0
 six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
