--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -3,10 +3,10 @@ aiosignal==1.2.0
 anyio==3.6.1
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
+asttokens==2.0.7
 async-timeout==4.0.2
-attrs==21.4.0
-azure-core==1.24.2
+attrs==22.1.0
+azure-core==1.25.0
 azure-identity==1.10.0
 Babel==2.10.3
 backcall==0.2.0
@@ -22,20 +22,30 @@ cloudpickle==2.1.0
 clr-loader==0.1.7
 cryptography==37.0.4
 cycler==0.11.0
-dask==2022.7.0
-dask-kubernetes==2022.5.2
+dask==2022.8.0
+dask-kubernetes==2022.7.0
 debugpy==1.6.2
 decorator==5.1.1
 defusedxml==0.7.1
-distributed==2022.7.0
+distributed==2022.8.0
 entrypoints==0.4
 et-xmlfile==1.1.0
-executing==0.8.3
+executing==0.10.0
 fastjsonschema==2.16.1
 fonttools==4.34.4
-frozenlist==1.3.0
-fsspec==2022.5.0
-google-auth==2.9.1
+frozenlist==1.3.1
+fsspec==2022.7.1
+google-api-core==2.8.2
+google-auth==2.10.0
+google-cloud-bigquery==3.3.1
+google-cloud-bigquery-storage==2.14.1
+google-cloud-core==2.3.2
+google-crc32c==1.3.0
+google-resumable-media==2.3.3
+googleapis-common-protos==1.56.4
+greenlet==1.1.2
+grpcio==1.47.0
+grpcio-status==1.47.0
 HeapDict==1.0.1
 idna==3.3
 ipykernel==6.15.1
@@ -45,22 +55,23 @@ iso8601==1.0.2
 jedi==0.18.1
 Jinja2==3.1.2
 joblib==1.1.0
-json5==0.9.8
-jsonschema==4.7.2
+json5==0.9.9
+jsonschema==4.9.1
 jupyter-client==7.3.4
 jupyter-core==4.11.1
 jupyter-server==1.18.1
-jupyterlab==3.4.4
+jupyterlab==3.4.5
 jupyterlab-pygments==0.2.2
 jupyterlab-server==2.15.0
 kiwisolver==1.4.4
-kopf==1.35.5
+kopf==1.35.6
 kubernetes==24.2.0
-kubernetes-asyncio==23.6.0
+kubernetes-asyncio==24.2.0
 locket==1.0.0
-lz4==4.0.1
+lxml==4.9.1
+lz4==4.0.2
 MarkupSafe==2.1.1
-matplotlib==3.5.2
+matplotlib==3.5.3
 matplotlib-inline==0.1.3
 mistune==0.8.4
 msal==1.18.0
@@ -69,58 +80,64 @@ msgpack==1.0.4
 multidict==6.0.2
 nbclassic==0.4.3
 nbclient==0.6.6
-nbconvert==6.5.0
+nbconvert==6.5.3
 nbformat==5.4.0
 nest-asyncio==1.5.5
 notebook==6.4.12
 notebook-shim==0.1.0
-numpy==1.23.1
+numpy==1.23.2
 oauthlib==3.2.0
 openpyxl==3.0.10
 packaging==21.3
 pandas==1.4.3
 pandocfilters==1.5.0
 parso==0.8.3
-partd==1.2.0
+partd==1.3.0
 patsy==0.5.2
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.2.0
-pip==22.2
+pip==22.2.2
+playwright==1.24.1
 portalocker==2.5.1
 prometheus-client==0.14.1
 prompt-toolkit==3.0.30
+proto-plus==1.22.0
+protobuf==3.20.1
 psutil==5.9.1
-psycopg==3.0.15
-psycopg-binary==3.0.15
+psycopg==3.0.16
+psycopg-binary==3.0.16
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyarrow==9.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
+pyee==8.1.0
 Pygments==2.12.0
 PyJWT==2.4.0
+pyodbc==4.0.34
 pyparsing==3.0.9
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 python-json-logger==2.0.4
 pythonnet==3.0.0rc4
-pytz==2022.1
+pytz==2022.2.1
 PyYAML==6.0
-pyzmq==23.2.0
+pyzmq==23.2.1
 requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
-scikit-learn==1.1.1
-scipy==1.8.1
+scikit-learn==1.1.2
+scipy==1.9.0
 seaborn==0.11.2
 Send2Trash==1.8.0
-setuptools==63.2.0
+setuptools==65.0.0
 six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
-stack-data==0.3.0
+stack-data==0.4.0
 statsmodels==0.13.2
 tblib==1.7.0
 terminado==0.15.0
@@ -129,11 +146,13 @@ tinycss2==1.1.1
 toolz==0.12.0
 tornado==6.1
 traitlets==5.3.0
+trino==0.315.0
 typing_extensions==4.3.0
-urllib3==1.26.10
+urllib3==1.26.11
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.3.3
+websockets==10.1
 wheel==0.37.1
-yarl==1.7.2
+yarl==1.8.1
 zict==2.2.0
