--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,13 +1,16 @@
+aiofiles==0.8.0
 aiohttp==3.8.1
 aiosignal==1.2.0
+aiosqlite==0.17.0
+alembic==1.8.1
 anyio==3.6.1
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
-asttokens==2.0.7
+asgi-lifespan==1.0.1
+asttokens==2.0.8
 async-timeout==4.0.2
+asyncpg==0.26.0
 attrs==22.1.0
-azure-core==1.25.0
-azure-identity==1.10.0
 Babel==2.10.3
 backcall==0.2.0
 beautifulsoup4==4.11.1
@@ -16,37 +19,46 @@ bokeh==2.4.3
 cachetools==5.2.0
 certifi==2022.6.15
 cffi==1.15.1
-charset-normalizer==2.1.0
+charset-normalizer==2.1.1
 click==8.1.3
 cloudpickle==2.1.0
 clr-loader==0.1.7
+commonmark==0.9.1
+coolname==1.1.0
+croniter==1.3.5
 cryptography==37.0.4
 cycler==0.11.0
-dask==2022.8.0
+dask==2022.8.1
 dask-kubernetes==2022.7.0
-debugpy==1.6.2
+debugpy==1.6.3
 decorator==5.1.1
 defusedxml==0.7.1
-distributed==2022.8.0
+distributed==2022.8.1
+docker==6.0.0
 entrypoints==0.4
 et-xmlfile==1.1.0
 executing==0.10.0
+fastapi==0.80.0
 fastjsonschema==2.16.1
-fonttools==4.34.4
+fonttools==4.37.0
 frozenlist==1.3.1
 fsspec==2022.7.1
 google-api-core==2.8.2
-google-auth==2.10.0
-google-cloud-bigquery==3.3.1
-google-cloud-bigquery-storage==2.14.1
+google-auth==2.11.0
+google-cloud-bigquery==3.3.2
+google-cloud-bigquery-storage==2.14.2
 google-cloud-core==2.3.2
 google-crc32c==1.3.0
 google-resumable-media==2.3.3
 googleapis-common-protos==1.56.4
 greenlet==1.1.2
+griffe==0.21.0
 grpcio==1.47.0
 grpcio-status==1.47.0
+h11==0.12.0
 HeapDict==1.0.1
+httpcore==0.15.0
+httpx==0.23.0
 idna==3.3
 ipykernel==6.15.1
 ipython==8.4.0
@@ -55,32 +67,34 @@ iso8601==1.0.2
 jedi==0.18.1
 Jinja2==3.1.2
 joblib==1.1.0
-json5==0.9.9
-jsonschema==4.9.1
+json5==0.9.10
+jsonpatch==1.32
+jsonpointer==2.3
+jsonschema==4.14.0
 jupyter-client==7.3.4
 jupyter-core==4.11.1
 jupyter-server==1.18.1
 jupyterlab==3.4.5
 jupyterlab-pygments==0.2.2
-jupyterlab-server==2.15.0
+jupyterlab_server==2.15.1
 kiwisolver==1.4.4
 kopf==1.35.6
 kubernetes==24.2.0
-kubernetes-asyncio==24.2.0
+kubernetes-asyncio==24.2.2
 locket==1.0.0
 lxml==4.9.1
 lz4==4.0.2
+Mako==1.2.1
 MarkupSafe==2.1.1
 matplotlib==3.5.3
-matplotlib-inline==0.1.3
-mistune==0.8.4
+matplotlib-inline==0.1.6
+mistune==2.0.4
 msal==1.18.0
-msal-extensions==1.0.0
 msgpack==1.0.4
 multidict==6.0.2
 nbclassic==0.4.3
-nbclient==0.6.6
-nbconvert==6.5.3
+nbclient==0.6.7
+nbconvert==7.0.0
 nbformat==5.4.0
 nest-asyncio==1.5.5
 notebook==6.4.12
@@ -93,17 +107,19 @@ pandas==1.4.3
 pandocfilters==1.5.0
 parso==0.8.3
 partd==1.3.0
+pathspec==0.9.0
 patsy==0.5.2
+pendulum==2.1.2
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.2.0
 pip==22.2.2
-playwright==1.24.1
-portalocker==2.5.1
+playwright==1.25.2
+prefect==2.2.0
 prometheus-client==0.14.1
 prompt-toolkit==3.0.30
 proto-plus==1.22.0
-protobuf==3.20.1
+protobuf==4.21.5
 psutil==5.9.1
 psycopg==3.0.16
 psycopg-binary==3.0.16
@@ -113,42 +129,55 @@ pyarrow==9.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
+pydantic==1.9.2
 pyee==8.1.0
-Pygments==2.12.0
+Pygments==2.13.0
 PyJWT==2.4.0
 pyodbc==4.0.34
 pyparsing==3.0.9
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 python-json-logger==2.0.4
+python-slugify==6.1.2
 pythonnet==3.0.0rc4
 pytz==2022.2.1
+pytzdata==2020.1
 PyYAML==6.0
 pyzmq==23.2.1
+readchar==4.0.2
 requests==2.28.1
 requests-oauthlib==1.3.1
+rfc3986==1.5.0
+rich==12.5.1
 rsa==4.9
 scikit-learn==1.1.2
 scipy==1.9.0
 seaborn==0.11.2
 Send2Trash==1.8.0
-setuptools==65.0.0
+setuptools==65.3.0
 six==1.16.0
+slack-sdk==3.18.1
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
+SQLAlchemy==1.4.40
 stack-data==0.4.0
+starlette==0.19.1
 statsmodels==0.13.2
 tblib==1.7.0
 terminado==0.15.0
+text-unidecode==1.3
 threadpoolctl==3.1.0
 tinycss2==1.1.1
+toml==0.10.2
 toolz==0.12.0
 tornado==6.1
 traitlets==5.3.0
 trino==0.315.0
+typer==0.6.1
 typing_extensions==4.3.0
-urllib3==1.26.11
+urllib3==1.26.12
+uvicorn==0.18.2
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.3.3
